<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tentacles</string>
    <string name="user_interface">Interface</string>
    <string name="bars">Bar Interface</string>
    <string name="system">System</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="attention">Attention</string>
    <string name="empty">Empty</string>
    <string name="delete">Delete</string>
    <string name="default_string">Default</string>
    <string name="menu_cancel">Discard</string>
    <string name="disabled">Disabled</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="themes_title">Themes</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="time_0_seconds_off">Off</string>
    <string name="time_0_2_seconds">.2 seconds</string>
    <string name="time_0_5_seconds">.5 seconds</string>
    <string name="time_1_second">1 second</string>
    <string name="time_1_5_seconds">1.5 seconds</string>
    <string name="time_2_seconds">2 seconds</string>
    <string name="time_2_5_seconds">2.5 seconds</string>
    <string name="time_3_seconds">3 seconds</string>
    <string name="time_3_5_seconds">3.5 seconds</string>
    <string name="time_4_seconds">4 seconds</string>
    <string name="time_4_5_seconds">4.5 seconds</string>
    <string name="time_5_seconds">5 seconds</string>
    <string name="time_5_5_seconds">5.5 seconds</string>
    <string name="time_6_seconds">6 seconds</string>
    <string name="time_7_seconds">7 seconds</string>
    <string name="time_8_seconds">8 seconds</string>
    <string name="time_9_seconds">9 seconds</string>
    <string name="time_10_seconds">10 seconds</string>
    <string name="about_oct_title">About OctOS</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="choose_application">Choose application</string>
    <string name="select_application">Select application</string>
    <string name="dpi">DPI</string>
    <string name="apps">Apps</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="button_settings">Buttons</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_launch_camera">Launch Camera</string>
    <string name="home_wake_title">Home button wake</string>
    <string name="home_wake_summary">Pressing the home button will wake your device</string>
    <string name="camera_wake_title">Camera button wake</string>
    <string name="camera_wake_summary">Pressing the camera button will wake your device</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_music_controls_title">Playback control</string>
    <string name="camera_music_controls_summary">When the screen is off, long pressing the camera key will play/pause current music track</string>
    <string name="volume_wake_title">Volume button wake</string>
    <string name="volume_wake_summary">Pressing either volume button will wake your device</string>
    <string name="volbtn_music_controls_title">Playback control</string>
    <string name="volbtn_music_controls_summary">When the screen is off, long pressing the volume keys will seek music tracks</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="swap_volume_buttons_title">Reorient volume buttons</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="more_device_controls_title">Device tunables</string>
    <string name="more_device_settings_title">Other device options</string>
    <string name="sensors_motors_title">Sensors &amp; motors</string>
    <string name="display_calibration_title">Display calibration</string>
    <string name="vibrator_intensity_title">Vibrator intensity</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>
    <string name="color_calibration_title">Color calibration</string>
    <string name="color_calibration_summary">Calibrate on-screen colors</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>
    <string name="category_gamma_title">Gamma</string>
    <string name="gamma_tuning_title_head">Gamma calibration</string>
    <string name="gamma_tuning_summary_head">Tweak gamma values</string>
    <string name="gamma_tuning_control_set_header">Group <xliff:g id="index">%d</xliff:g></string>
    <string name="gamma_tuning_contrast">Contrast</string>
    <string name="gamma_tuning_brightness">Brightness</string>
    <string name="gamma_tuning_saturation">Saturation</string>
    <string name="button_backlight_title">Backlight</string>
    <string name="button_backlight_enabled">Illuminate buttons</string>
    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
    <string name="button_backlight_seekbar_title">Button brightness</string>
    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
    <string name="backlight_timeout_title">Illumination timeout</string>
    <string name="backlight_timeout_unlimited">Don\'t turn off</string>
    <plurals name="backlight_timeout_time">
        <item quantity="one"><xliff:g id="seconds">%d</xliff:g> second</item>
        <item quantity="other"><xliff:g id="seconds">%d</xliff:g> seconds</item>
    </plurals>
    <string name="backlight_summary_disabled">Disabled</string>
    <string name="backlight_summary_enabled_with_timeout">Enabled for <xliff:g id="timeout">%s</xliff:g></string>
    <string name="backlight_summary_enabled">Enabled</string>
    <string name="status_bar_title">Statusbar</string>
    <string name="sb_battery_category">Battery</string>
    <string name="sb_clock_category">Clock</string>
    <string name="sb_general_category">General</string>
    <string name="sb_notification_category">Notification Drawer</string>
    <string name="sb_quicksettings_category">Quick Settings</string>
    <string name="ui_general_category">General</string>
    <string name="ui_recents_category">Recents Panel</string>
    <string name="lock_clock_title">Clock widget</string>
    <string name="lock_clock_summary">View or change CM cLock widget options</string>
    <string name="keyguard_title">Lockscreen</string>
    <string name="ls_targets_category">Targets</string>
    <string name="ls_general_category">General</string>
    <string name="ls_notifications_category">Notifications</string>
    <string name="ls_activedisplay_category">Active Display</string>
    <string name="ls_buttons_category">Buttons</string>
    <string name="clear_button_title">Clear all position</string>
    <string name="clear_button_off">Off</string>
    <string name="clear_button_top_left">Top left</string>
    <string name="clear_button_top_right">Top right</string>
    <string name="clear_button_bottom_left">Bottom left</string>
    <string name="clear_button_bottom_right">Bottom right</string>
    <string name="quick_settings_panel_title">Quick Settings panel</string>
    <string name="title_static_tiles">Static tiles</string>
    <string name="tile_picker_title">Tiles and layout</string>
    <string name="tile_picker_summary">View, select or change the layout of the displayed tiles</string>
    <string name="tile_choose_title">Choose a tile</string>
    <string name="title_tile_airplane">Airplane mode</string>
    <string name="title_tile_battery">Battery stats</string>
    <string name="title_tile_bluetooth">Bluetooth</string>
    <string name="title_tile_brightness">Brightness</string>
    <string name="title_tile_camera">Camera</string>
    <string name="title_tile_oct">Tentacles</string>
    <string name="title_tile_sleep">Go to sleep</string>
    <string name="title_tile_gps">GPS</string>
    <string name="title_tile_torch">Torch</string>
    <string name="title_tile_lockscreen">Lock screen</string>
    <string name="title_tile_lte">LTE</string>
    <string name="title_tile_mobiledata">Mobile data</string>
    <string name="title_tile_profile">Profile</string>
    <string name="title_tile_performance_profile">Performance profile</string>
    <string name="title_tile_autorotate">Orientation</string>
    <string name="title_tile_settings">Settings</string>
    <string name="title_tile_sound">Sound</string>
    <string name="title_tile_sync">Sync</string>
    <string name="title_tile_wifiap">Wi-Fi AP</string>
    <string name="title_tile_wifi">Wi-Fi</string>
    <string name="title_tile_user">User switcher</string>
    <string name="title_tile_networkmode">Network mode</string>
    <string name="title_tile_nfc">NFC</string>
    <string name="title_tile_screen_timeout">Screen timeout</string>
    <string name="title_tile_quick_record">Quick Record</string>
    <string name="title_tile_quiet_hours">Quiet hours</string>
    <string name="title_tile_volume">Volume</string>
    <string name="title_tile_expanded_desktop">Expanded desktop</string>
    <string name="title_tile_network_adb">ADB over network</string>
    <string name="title_tile_music">Music playback</string>
    <string name="title_tile_screenshot">Screenshot</string>
    <string name="title_tile_immersive">Immersive mode</string>
    <string name="power_menu_title">Power menu</string>
</resources>