<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:id="@+id/about_octos"
        android:title="@string/about_octos_title" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="org.oct.about"
            android:targetClass="org.oct.about.activities.AboutActivity" />
    </header>
    
	<header
        android:title="@string/app_name" />
        
	    <header
	        android:id="@+id/themes_settings"
	        android:icon="@drawable/ic_settings_themes"
	        android:title="@string/themes_title">
 	       <intent
	            android:action="android.intent.action.MAIN"
	            android:targetPackage="com.tmobile.themechooser"
	            android:targetClass="com.tmobile.themechooser.ThemeChooser" />
	    </header>

        <header
            android:id="@+id/power_menu_setings"
            android:title="@string/power_menu_title"
            android:icon="@drawable/ic_tentacles_power"
            android:fragment="com.oct.tentacles.fragments.PowerMenuSettings" />
            
        <header
            android:key="@+id/interface_settings"
            android:icon="@drawable/ic_tentacles_interface"
            android:title="@string/user_interface"
            android:fragment="com.oct.tentacles.fragments.ui.InterfaceSettings" />

        <header
            android:id="@+id/statusbar_settings"
            android:title="@string/sb_quicksettings_category"
            android:icon="@drawable/ic_tentacles_sb"
            android:fragment="com.oct.tentacles.fragments.sb.SbSettings" />

</preference-headers>
